--- a/CommentStripper/CommentStripper.csproj
+++ b/CommentStripper/CommentStripper.csproj
@@ -45,6 +45,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\MIT.licenseheader">
+      <Link>MIT.licenseheader</Link>
+    </None>
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
