--- a/CommentStripper/CommentStripper.csproj
+++ b/CommentStripper/CommentStripper.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentStripperCSharpSyntaxRewriter.cs" />
     <Compile Include="ISyntaxNodeHandler.cs" />
     <Compile Include="ProjectFileHandler.cs" />
     <Compile Include="CSharpSourceFileHandler.cs" />
