--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="CSharpCommentStrippingSyntaxNodeHandlerTest.cs" />
     <Compile Include="CommentStripperCSharpSyntaxRewriterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleCode\Sample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\MIT.licenseheader">
